Archive2/da/ae3ce4035f5c8b/output
main.cpp: In function 'main':
main.cpp:6:15: error: initializer element is not constant
  static int b=a;
               ^
